agentguard/speclang/AgentSpecFullParser.py
# Generated from agentguard/speclang/AgentSpecFull.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AgentSpecFullParser ( Parser ):

    grammarFileName = "AgentSpecFull.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'rule'", "'trigger'", "'check'", "'enforce'", 
                     "'any'", "<INVALID>", "<INVALID>", "'end'", "':'", 
                     "','", "'('", "')'", "'{'", "'}'", "'.'", "'['", "']'", 
                     "'@'", "'='", "'!'", "'&'", "'|'", "'invoke_action'", 
                     "<INVALID>", "'state_change'", "'before_action'", "'after_action'", 
                     "'finish'" ]

    symbolicNames = [ "<INVALID>", "RULE", "TRIGGER", "CHECK", "ENFORCE", 
                      "ANY", "TRUE", "FALSE", "END", "COLON", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "DOT", "LBRACK", "RBRACK", 
                      "AT", "EQ", "NOT", "AND", "OR", "INVOKE", "ENFORCEMENT", 
                      "STATE_CHANGE", "BEFORE_ACTION", "AFTER_ACTION", "FINISH", 
                      "IDENTIFIER", "STRING", "INTEGER", "FLOAT", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_rule = 1
    RULE_ruleClause = 2
    RULE_triggerClause = 3
    RULE_event = 4
    RULE_eventTerm = 5
    RULE_eventPath = 6
    RULE_eventWord = 7
    RULE_checkClause = 8
    RULE_enforceClause = 9
    RULE_predicate = 10
    RULE_predicateFunc = 11
    RULE_enforcement = 12
    RULE_actionInvoke = 13
    RULE_kvPair = 14
    RULE_value = 15
    RULE_number = 16
    RULE_config = 17
    RULE_namespace = 18

    ruleNames =  [ "program", "rule", "ruleClause", "triggerClause", "event", 
                   "eventTerm", "eventPath", "eventWord", "checkClause", 
                   "enforceClause", "predicate", "predicateFunc", "enforcement", 
                   "actionInvoke", "kvPair", "value", "number", "config", 
                   "namespace" ]

    EOF = Token.EOF
    RULE=1
    TRIGGER=2
    CHECK=3
    ENFORCE=4
    ANY=5
    TRUE=6
    FALSE=7
    END=8
    COLON=9
    COMMA=10
    LPAREN=11
    RPAREN=12
    LBRACE=13
    RBRACE=14
    DOT=15
    LBRACK=16
    RBRACK=17
    AT=18
    EQ=19
    NOT=20
    AND=21
    OR=22
    INVOKE=23
    ENFORCEMENT=24
    STATE_CHANGE=25
    BEFORE_ACTION=26
    AFTER_ACTION=27
    FINISH=28
    IDENTIFIER=29
    STRING=30
    INTEGER=31
    FLOAT=32
    LINE_COMMENT=33
    BLOCK_COMMENT=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AgentSpecFullParser.EOF, 0)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.RuleContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.RuleContext,i)


        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = AgentSpecFullParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 38
                self.rule_()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(AgentSpecFullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleClause(self):
            return self.getTypedRuleContext(AgentSpecFullParser.RuleClauseContext,0)


        def triggerClause(self):
            return self.getTypedRuleContext(AgentSpecFullParser.TriggerClauseContext,0)


        def checkClause(self):
            return self.getTypedRuleContext(AgentSpecFullParser.CheckClauseContext,0)


        def enforceClause(self):
            return self.getTypedRuleContext(AgentSpecFullParser.EnforceClauseContext,0)


        def END(self):
            return self.getToken(AgentSpecFullParser.END, 0)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)




    def rule_(self):

        localctx = AgentSpecFullParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.ruleClause()
            self.state = 47
            self.triggerClause()
            self.state = 48
            self.checkClause()
            self.state = 49
            self.enforceClause()
            self.state = 50
            self.match(AgentSpecFullParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(AgentSpecFullParser.RULE, 0)

        def AT(self):
            return self.getToken(AgentSpecFullParser.AT, 0)

        def IDENTIFIER(self):
            return self.getToken(AgentSpecFullParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_ruleClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleClause" ):
                listener.enterRuleClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleClause" ):
                listener.exitRuleClause(self)




    def ruleClause(self):

        localctx = AgentSpecFullParser.RuleClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ruleClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(AgentSpecFullParser.RULE)
            self.state = 53
            self.match(AgentSpecFullParser.AT)
            self.state = 54
            self.match(AgentSpecFullParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TriggerClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRIGGER(self):
            return self.getToken(AgentSpecFullParser.TRIGGER, 0)

        def event(self):
            return self.getTypedRuleContext(AgentSpecFullParser.EventContext,0)


        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_triggerClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriggerClause" ):
                listener.enterTriggerClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriggerClause" ):
                listener.exitTriggerClause(self)




    def triggerClause(self):

        localctx = AgentSpecFullParser.TriggerClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_triggerClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(AgentSpecFullParser.TRIGGER)
            self.state = 57
            self.event()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.EventTermContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.EventTermContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(AgentSpecFullParser.OR)
            else:
                return self.getToken(AgentSpecFullParser.OR, i)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)




    def event(self):

        localctx = AgentSpecFullParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.eventTerm()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 60
                self.match(AgentSpecFullParser.OR)
                self.state = 61
                self.eventTerm()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventPath(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.EventPathContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.EventPathContext,i)


        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_eventTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventTerm" ):
                listener.enterEventTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventTerm" ):
                listener.exitEventTerm(self)




    def eventTerm(self):

        localctx = AgentSpecFullParser.EventTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_eventTerm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.eventPath()
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1040187424) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventWord(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.EventWordContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.EventWordContext,i)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(AgentSpecFullParser.DOT)
            else:
                return self.getToken(AgentSpecFullParser.DOT, i)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_eventPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventPath" ):
                listener.enterEventPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventPath" ):
                listener.exitEventPath(self)




    def eventPath(self):

        localctx = AgentSpecFullParser.EventPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eventPath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.eventWord()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 73
                self.match(AgentSpecFullParser.DOT)
                self.state = 74
                self.eventWord()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventWordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AgentSpecFullParser.IDENTIFIER, 0)

        def STATE_CHANGE(self):
            return self.getToken(AgentSpecFullParser.STATE_CHANGE, 0)

        def BEFORE_ACTION(self):
            return self.getToken(AgentSpecFullParser.BEFORE_ACTION, 0)

        def AFTER_ACTION(self):
            return self.getToken(AgentSpecFullParser.AFTER_ACTION, 0)

        def FINISH(self):
            return self.getToken(AgentSpecFullParser.FINISH, 0)

        def ANY(self):
            return self.getToken(AgentSpecFullParser.ANY, 0)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_eventWord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventWord" ):
                listener.enterEventWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventWord" ):
                listener.exitEventWord(self)




    def eventWord(self):

        localctx = AgentSpecFullParser.EventWordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eventWord)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1040187424) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CheckClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHECK(self):
            return self.getToken(AgentSpecFullParser.CHECK, 0)

        def predicate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.PredicateContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.PredicateContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(AgentSpecFullParser.AND)
            else:
                return self.getToken(AgentSpecFullParser.AND, i)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_checkClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCheckClause" ):
                listener.enterCheckClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCheckClause" ):
                listener.exitCheckClause(self)




    def checkClause(self):

        localctx = AgentSpecFullParser.CheckClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_checkClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(AgentSpecFullParser.CHECK)
            self.state = 83
            self.predicate()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 540016832) != 0):
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 84
                    self.match(AgentSpecFullParser.AND)


                self.state = 87
                self.predicate()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnforceClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENFORCE(self):
            return self.getToken(AgentSpecFullParser.ENFORCE, 0)

        def enforcement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.EnforcementContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.EnforcementContext,i)


        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_enforceClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnforceClause" ):
                listener.enterEnforceClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnforceClause" ):
                listener.exitEnforceClause(self)




    def enforceClause(self):

        localctx = AgentSpecFullParser.EnforceClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enforceClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(AgentSpecFullParser.ENFORCE)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.enforcement()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 562036736) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(AgentSpecFullParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(AgentSpecFullParser.FALSE, 0)

        def NOT(self):
            return self.getToken(AgentSpecFullParser.NOT, 0)

        def predicate(self):
            return self.getTypedRuleContext(AgentSpecFullParser.PredicateContext,0)


        def predicateFunc(self):
            return self.getTypedRuleContext(AgentSpecFullParser.PredicateFuncContext,0)


        def IDENTIFIER(self):
            return self.getToken(AgentSpecFullParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = AgentSpecFullParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_predicate)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(AgentSpecFullParser.TRUE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(AgentSpecFullParser.FALSE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.match(AgentSpecFullParser.NOT)
                self.state = 102
                self.predicate()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.predicateFunc()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.match(AgentSpecFullParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AgentSpecFullParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(AgentSpecFullParser.LPAREN, 0)

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.NumberContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.NumberContext,i)


        def RPAREN(self):
            return self.getToken(AgentSpecFullParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AgentSpecFullParser.COMMA)
            else:
                return self.getToken(AgentSpecFullParser.COMMA, i)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_predicateFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateFunc" ):
                listener.enterPredicateFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateFunc" ):
                listener.exitPredicateFunc(self)




    def predicateFunc(self):

        localctx = AgentSpecFullParser.PredicateFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_predicateFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(AgentSpecFullParser.IDENTIFIER)
            self.state = 108
            self.match(AgentSpecFullParser.LPAREN)
            self.state = 109
            self.number()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 110
                self.match(AgentSpecFullParser.COMMA)
                self.state = 111
                self.number()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(AgentSpecFullParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnforcementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENFORCEMENT(self):
            return self.getToken(AgentSpecFullParser.ENFORCEMENT, 0)

        def LPAREN(self):
            return self.getToken(AgentSpecFullParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(AgentSpecFullParser.STRING, 0)

        def RPAREN(self):
            return self.getToken(AgentSpecFullParser.RPAREN, 0)

        def actionInvoke(self):
            return self.getTypedRuleContext(AgentSpecFullParser.ActionInvokeContext,0)


        def config(self):
            return self.getTypedRuleContext(AgentSpecFullParser.ConfigContext,0)


        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_enforcement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnforcement" ):
                listener.enterEnforcement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnforcement" ):
                listener.exitEnforcement(self)




    def enforcement(self):

        localctx = AgentSpecFullParser.EnforcementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_enforcement)
        self._la = 0 # Token type
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(AgentSpecFullParser.ENFORCEMENT)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 120
                    self.match(AgentSpecFullParser.LPAREN)
                    self.state = 121
                    self.match(AgentSpecFullParser.STRING)
                    self.state = 122
                    self.match(AgentSpecFullParser.RPAREN)


                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.actionInvoke()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.config()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionInvokeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVOKE(self):
            return self.getToken(AgentSpecFullParser.INVOKE, 0)

        def LPAREN(self):
            return self.getToken(AgentSpecFullParser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(AgentSpecFullParser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AgentSpecFullParser.COMMA)
            else:
                return self.getToken(AgentSpecFullParser.COMMA, i)

        def LBRACE(self):
            return self.getToken(AgentSpecFullParser.LBRACE, 0)

        def kvPair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecFullParser.KvPairContext)
            else:
                return self.getTypedRuleContext(AgentSpecFullParser.KvPairContext,i)


        def RBRACE(self):
            return self.getToken(AgentSpecFullParser.RBRACE, 0)

        def RPAREN(self):
            return self.getToken(AgentSpecFullParser.RPAREN, 0)

        def getRuleIndex(self):
            return AgentSpecFullParser.RULE_actionInvoke

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionInvoke" ):
                listener.enterActionInvoke(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionInvoke" ):
                listener.exitActionInvoke(self)




    def actionInvoke(self):
